--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             color: #ffffff; /* 白色文字 */
             font-weight: bold; /* 粗體 */
             border: none;
-            padding: 5vh 10vw; /* 調整字體與按鈕大小 */
-            font-size: 6vw; /* 字體更大 */
+            padding: 15px 40px; /* 按鈕大小固定 */
+            font-size: 28px; /* 文字放大 */
             border-radius: 10px;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
@@ -39,7 +39,7 @@
 
         .start-button:hover {
             background: linear-gradient(to right, #1e4ca6, #0d3b8b); /* 懸停漸層反轉 */
-            transform: scale(1.05); /* 微微放大 */
+            transform: scale(1.05);
         }
     </style>
 </head>
