--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
             box-sizing: border-box;
         }
 
-        h1 {
-            color: #4b0082; /* 深紫色標題文字 */
-            font-size: 8vw;
-            margin-bottom: 6vh;
-            text-align: center;
+        .title-image {
+            max-width: 80%;  /* 圖片最大寬度占螢幕80% */
+            height: auto;
+            margin-bottom: 6vh; /* 與按鈕距離 */
         }
 
         .start-button {
@@ -44,7 +43,7 @@
     </style>
 </head>
 <body>
-    <h1>kitten rps game</h1>
+    <img src="kitten rps game.png" alt="Kitten RPS Game" class="title-image">
     <button class="start-button">start</button>
 </body>
 </html>
