--- a/index.html
+++ b/index.html
@@ -19,6 +19,15 @@
         }
 
         /* 首頁 */
+        #start-screen {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100%;
+            text-align: center;
+        }
+
         .title-image {
             max-width: 80%;
             height: auto;
@@ -47,36 +56,42 @@
             display: none;
             flex-direction: column;
             align-items: center;
+            justify-content: flex-start;
+            padding-top: 5vh;
+            width: 100%;
+            text-align: center;
         }
 
         #game-text {
             color: #4b0082;
-            font-size: 5vw;
-            margin-bottom: 2vh;
-            text-align: center;
+            font-size: 7vw; /* 放大文字 */
+            margin-bottom: 4vh; /* 與小貓距離 */
+            font-weight: bold;
         }
 
         #kitten-container {
             position: relative;
-            margin-bottom: 3vh;
+            margin-bottom: 5vh; /* 與玩家按鈕距離 */
         }
 
         #kitten-img {
-            max-width: 200px;
+            max-width: 220px;
             height: auto;
         }
 
         #computer-choice {
             position: absolute;
-            left: -10px; /* 微調靠近左下角 */
-            bottom: -10px;
-            max-width: 50px;
+            left: -5px; /* 微調靠近左下角 */
+            bottom: -5px;
+            max-width: 80px; /* 放大電腦出拳 */
             height: auto;
+            z-index: 2; /* 讓圖片蓋在小貓上 */
         }
 
         .player-buttons {
             display: flex;
-            gap: 20px;
+            gap: 30px; /* 間距增加 */
+            margin-bottom: 5vh;
         }
 
         .player-buttons img {
@@ -86,8 +101,8 @@
         }
 
         #result {
-            margin-top: 20px;
-            font-size: 24px;
+            margin-top: 25px;
+            font-size: 26px;
             font-weight: bold;
             color: #4b0082;
         }
