--- a/index.html
+++ b/index.html
@@ -44,67 +44,14 @@
             border-radius: 10px;
             cursor: pointer;
             transition: background 0.3s, transform 0.2s;
+            text-decoration: none; /* 為 a 標籤移除底線 */
+            display: inline-block; /* 保持按鈕尺寸 */
+            text-align: center;
         }
 
         .start-button:hover {
             background: linear-gradient(to right, #1e4ca6, #0d3b8b);
             transform: scale(1.05);
-        }
-
-        /* 遊戲畫面 */
-        #game-screen {
-            display: none;
-            flex-direction: column;
-            align-items: center;
-            justify-content: flex-start;
-            padding-top: 5vh;
-            width: 100%;
-            text-align: center;
-        }
-
-        #game-text {
-            color: #4b0082;
-            font-size: 7vw; /* 放大文字 */
-            margin-bottom: 4vh; /* 與小貓距離 */
-            font-weight: bold;
-        }
-
-        #kitten-container {
-            position: relative;
-            margin-bottom: 5vh; /* 與玩家按鈕距離 */
-        }
-
-        #kitten-img {
-            max-width: 220px;
-            height: auto;
-        }
-
-        #computer-choice {
-            position: absolute;
-            left: -5px; /* 微調靠近左下角 */
-            bottom: -5px;
-            max-width: 80px; /* 放大電腦出拳 */
-            height: auto;
-            z-index: 2; /* 讓圖片蓋在小貓上 */
-        }
-
-        .player-buttons {
-            display: flex;
-            gap: 30px; /* 間距增加 */
-            margin-bottom: 5vh;
-        }
-
-        .player-buttons img {
-            width: 60px;
-            height: 60px;
-            cursor: pointer;
-        }
-
-        #result {
-            margin-top: 25px;
-            font-size: 26px;
-            font-weight: bold;
-            color: #4b0082;
         }
     </style>
 </head>
@@ -113,70 +60,9 @@
     <!-- 首頁 -->
     <div id="start-screen">
         <img src="kitten rps game.png" alt="Kitten RPS Game" class="title-image">
-        <button class="start-button">start</button>
+        <!-- 修改 start 按鈕為跳轉 game.html -->
+        <a href="game.html" class="start-button">Start</a>
     </div>
-
-    <!-- 遊戲畫面 -->
-    <div id="game-screen">
-        <div id="game-text">可以和小貓猜拳嗎？</div>
-        <div id="kitten-container">
-            <img src="kitten.png" alt="kitten" id="kitten-img">
-            <img src="" alt="computer choice" id="computer-choice">
-        </div>
-        <div class="player-buttons">
-            <img src="r.png" alt="剪刀" data-choice="r">
-            <img src="g.png" alt="石頭" data-choice="g">
-            <img src="b.png" alt="布" data-choice="b">
-        </div>
-        <div id="result"></div>
-    </div>
-
-    <script>
-        const startBtn = document.querySelector(".start-button");
-        const startScreen = document.getElementById("start-screen");
-        const gameScreen = document.getElementById("game-screen");
-
-        const playerButtons = document.querySelectorAll(".player-buttons img");
-        const computerChoiceImg = document.getElementById("computer-choice");
-        const resultDiv = document.getElementById("result");
-
-        const computerOptions = ['scissors2.png', 'rock2.png', 'paper2.png'];
-
-        // 點擊 start → 顯示遊戲畫面
-        startBtn.addEventListener("click", () => {
-            startScreen.style.display = "none";
-            gameScreen.style.display = "flex";
-        });
-
-        // 玩家選擇
-        playerButtons.forEach(btn => {
-            btn.addEventListener("click", () => {
-                const playerChoice = btn.getAttribute("data-choice");
-
-                // 電腦隨機出拳
-                const computerChoiceFile = computerOptions[Math.floor(Math.random() * 3)];
-                computerChoiceImg.src = computerChoiceFile;
-
-                // 判定勝負
-                let result = '';
-                if (playerChoice === 'r') {
-                    if (computerChoiceFile === 'scissors2.png') result = '平手';
-                    else if (computerChoiceFile === 'rock2.png') result = '玩家輸';
-                    else if (computerChoiceFile === 'paper2.png') result = '玩家贏';
-                } else if (playerChoice === 'g') {
-                    if (computerChoiceFile === 'scissors2.png') result = '玩家贏';
-                    else if (computerChoiceFile === 'rock2.png') result = '平手';
-                    else if (computerChoiceFile === 'paper2.png') result = '玩家輸';
-                } else if (playerChoice === 'b') {
-                    if (computerChoiceFile === 'scissors2.png') result = '玩家輸';
-                    else if (computerChoiceFile === 'rock2.png') result = '玩家贏';
-                    else if (computerChoiceFile === 'paper2.png') result = '平手';
-                }
-
-                resultDiv.textContent = result;
-            });
-        });
-    </script>
 
 </body>
 </html>
